création page html avec formulaires

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
           </li>
         </ol>
       </fieldset>
-
       <fieldset id="adresseSection">
         <legend>Votre adresse de livraison</legend>
         <ol>
@@ -41,14 +40,13 @@
             <input type="text" id="ville" placeholder="ville">
           </li>
       </fieldset>
-
       <fieldset id="réglementSection">
         <legend>Informations de réglement</legend>
         <ol>
           <li>
             <label for="typeCarte">Type de carte bancaire : </label>
             <div id="carteSelection">
-              <input type="radio" name="typeCarte" checked>VISA<br>
+              <input type="radio" name="typeCarte">VISA<br>
               <input type="radio" name="typeCarte">Mastercard
             </div>
           </li>
