--- a/index.html
+++ b/index.html
@@ -1,69 +1,43 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Titre Page</title>
-  </head>
-  <body>
-    <form action="" method="post">
-      <fieldset id="identitéSection">
-        <legend>Votre identité</legend>
-        <ol>
-          <li>
-            <label for="nom">Nom : </label>
-            <input type="text" id="nom" placeholder="Nom">
-          </li>
-          <li>
-            <label for="prénom">Prénom : </label>
-            <input type="text" id="prénom" placeholder="Prénom">
-          </li>
-          <li>
-            <label for="mail">Adresse mail : </label>
-            <input type="email" id="mail" placeholder="Adresse mail"> 
-          </li>
-        </ol>
-      </fieldset>
-      <fieldset id="adresseSection">
-        <legend>Votre adresse de livraison</legend>
-        <ol>
-          <li>
-            <label for="adress">Adresse : </label>
-            <textarea id="adresse"></textarea>
-          </li>
-          <li>
-            <label for="codePostal">Code Postal : </label>
-            <input type="text" id="codePostal" placeholder="Code postal">
-          </li>
-          <li>
-            <label for="codePostal">Ville : </label>
-            <input type="text" id="ville" placeholder="ville">
-          </li>
-      </fieldset>
-      <fieldset id="réglementSection">
-        <legend>Informations de réglement</legend>
-        <ol>
-          <li>
-            <label for="typeCarte">Type de carte bancaire : </label>
-            <div id="carteSelection">
-              <input type="radio" name="typeCarte">VISA<br>
-              <input type="radio" name="typeCarte">Mastercard
-            </div>
-          </li>
-          <li>
-            <label for="numCarte">Numéro de carte : </label>
-            <input type="text" id="NumCarte" placeholder="Numéro de carte">
-          </li>
-          <li>
-            <label for="codeCarte">Code de carte : </label>
-            <input type="text" id="codeSecurité" placeholder="Code de sécurité">
-          </li>
-          <li>
-            <label for="nonTitulaire">Nom du titulaire : </label>
-            <input type="text" id="nomTitulaire" placeholder="Nom du titulaire">
-          </li>
-        </ol>
-      </fieldset>
-      <button type="submit">J'achète</button>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Bon de commande</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <form method="post" action="#">
+    <fieldset class="form1">
+      <legend class="form1">Votre identité</legend>
+      <ol>
+        <li><label for="nom">Nom : </label><input type="text" name="nom" placeholder="nom" id="nom" /></li>
+        <li><label for="prenom">Prénom : </label><input type="text" name="prenom" placeholder="prenom" id="prenom" /></li>
+        <li><label for="adresseEmail">Adresse mail : </label><input type="text" name="adresseEmail" placeholder="adresse email" id="adresseEmail" /></li>
+      </ol>
+    </fieldset>
+    <fieldset class="form2">
+      <legend class="form2">Adresse de livraison</legend>
+      <ol>
+        <li><label for="adresse">Adresse : </label><textarea name="adresse" placeholder="adresse" placeholder="adresse" id="adresse"></textarea></li>
+        <li><label for="codePostal">Code postal : </label><input type="text" name="codePostal" placeholder="code postal" id="codePostal" /></li>
+        <li><label for="adresseEmail">Code postal : </label><input type="text" name="adresseEmail" placeholder="adresse email" id="adresseEmail" /></li>
+      </ol>
+    </fieldset>
+    <fieldset class="form3">
+      <legend class="form3">Information du règlement</legend>
+      <ol>
+        <li><p>Type de carte bancaire</p>
+          <ul>
+            <li><input type="radio" name="carteDeCredit"/><label>visa</label></li>
+            <li><input type="radio" name="carteDeCredit"/><label>Mastercard</label></li>
+          </ul>
+        </li>
+        <li><label for="numeroDeCarte">Numero de carte : </label><input type="text" name="numeroDeCarte" placeholder="numero de carte" id="numeroDeCarte" /></li>
+        <li><label for="codeDeSecurite">Code de sécurité : </label><input type="text" name="codeDeSecurite" placeholder="code de securite" id="codeDeSecurite" /></li>
+        <li><label for="nomDuTitulaire">Nom du titulaire : </label><input type="text" name="nomDuTitulaire" placeholder="nom du titulaire" id="nomDuTitulaire" /></li>
+      </ol>
+    </fieldset>
+    <input type="submit" value="J'achète" />
+  </form>
+</body>
 </html>
